Add admin privilege check at application startup